--- a/content/projects/silverium.mdx
+++ b/content/projects/silverium.mdx
@@ -1,9 +1,9 @@
 ---
-title: chronark.com
+title: Porfolio
 description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
-date: 2023-03-28
+repository: silverium/silverium
+url: https://silverium.vercel.app/
+date: 2023-12-01
 published: true
 ---
 
