Add Vue listpage component

--- a/content/projects/music-list.mdx
+++ b/content/projects/music-list.mdx
@@ -7,6 +7,6 @@ date: 2020-05-01
 published: true
 ---
 
-
+## Vue listpage
 Coding challenge for a job interview. The task was to create a list page with a search bar and a list of items. The list should be searchable and sortable. The list items should be clickable and open a detail page. The detail page should have a back button to return to the list page.
 
