Fix typo in project title

--- a/content/projects/silverium.mdx
+++ b/content/projects/silverium.mdx
@@ -1,5 +1,5 @@
 ---
-title: Porfolio
+title: Portfolio
 description: The website you're looking at
 repository: silverium/silverium
 url: https://silverium.vercel.app/
