Update repository in rlaw.mdx

--- a/content/projects/rlaw.mdx
+++ b/content/projects/rlaw.mdx
@@ -1,7 +1,7 @@
 ---
 title: Rlaw
 description: rlaw.es is a Spanish website that provides legal services and advice to individuals and businesses. It is a general law firm, offering a wide range of legal services
-repository: silverium/silverium
+repository: silverium/rlaw
 url: https://rlaw.es/
 date: 2018-04-01
 published: true
