Update website URLs and project information

--- a/content/projects/silverium.mdx
+++ b/content/projects/silverium.mdx
@@ -2,7 +2,7 @@
 title: Portfolio
 description: The website you're looking at
 repository: silverium/silverium
-url: https://silverium.vercel.app/
+url: https://www.soldeplata.dev
 date: 2023-12-01
 published: true
 ---
