--- a/content/projects/club-esportiu-lluita-olimpica-calafell.mdx
+++ b/content/projects/club-esportiu-lluita-olimpica-calafell.mdx
@@ -2,7 +2,7 @@
 title: Club Esportiu Lluita Olímpica Calafell
 description: Website for a wrestling club in Calafell, Tarragona, Spain
 repository: silverium/club-esportiu-lluita-olimpica-calafell
-url: https://rlaw.es/
+url: https://club-esportiu-lluita-olimpica-calafell.vercel.app/
 date: 2023-09-01
 published: true
 ---
