Update URL for Club Esportiu Lluita Olímpica Calafell project

--- a/content/projects/club-esportiu-lluita-olimpica-calafell.mdx
+++ b/content/projects/club-esportiu-lluita-olimpica-calafell.mdx
@@ -2,7 +2,7 @@
 title: Club Esportiu Lluita Olímpica Calafell
 description: Website for a wrestling club in Calafell, Tarragona, Spain
 repository: silverium/club-esportiu-lluita-olimpica-calafell
-url: https://club-esportiu-lluita-olimpica-calafell.vercel.app/
+url: https://www.lluitacalafell.com
 date: 2023-09-01
 published: true
 ---
